Updated README and config_example files

--- a/config/config_env.rb.example
+++ b/config/config_env.rb.example
@@ -7,8 +7,7 @@
 config_env :[ENV_NAME] do
   set 'DB_KEY', [database encryption keys encoded with base64 urlsafe encoding]
   set 'MSG_KEY', [Session secret key]
-  set 'CLIENT_ID', [GOOGLE DEVELOPER CLIENT ID]
-  set 'CLIENT_SECRET', [GOOGLE DEVELOPER CLIENT SECRET]
   set 'UI_PRIVATE_KEY', [Private key for UI App]
   set 'API_PUBLIC_KEY', [Public key for API]
+  set 'API_URL', [URL_OF_API/api/v1/]
 end
